--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.1",
     "@fortawesome/vue-fontawesome": "^0.1.3",
     "@nuxtjs/apollo": "^4.0.0-rc2.3",
-    "apollo-link-http": "^1.5.7",
+    "apollo-link-http": "^1.5.9",
+    "core-js": "^2.6.0",
     "graphql": "^14.0.2",
     "nuxt": "^1.4.5",
     "vue-apollo": "3.0.0-beta.19",
