--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
-    "@fortawesome/fontawesome-svg-core": "^1.2.10",
-    "@fortawesome/free-brands-svg-icons": "^5.6.1",
-    "@fortawesome/free-solid-svg-icons": "^5.6.1",
-    "@fortawesome/vue-fontawesome": "^0.1.3",
     "@nuxtjs/apollo": "^4.0.0-rc2.3",
     "apollo-link-http": "^1.5.9",
-    "core-js": "^2.6.0",
-    "graphql": "^14.0.2",
-    "nuxt": "^1.4.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-brands-svg-icons": "^5.8.1",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
+    "@nuxtjs/apollo": "^4.0.0-rc4",
+    "@nuxtjs/redirect-module": "^0.2.0",
+    "apollo-link-http": "^1.5.14",
+    "core-js": "^2.6.5",
+    "graphql": "^14.2.1",
+    "nuxt": "^2.5.1",
     "vue-apollo": "3.0.0-beta.19",
     "vue-moment": "^4.0.0"
   },
