--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
-    "@nuxtjs/apollo": "^4.0.0-rc2.3",
-    "apollo-link-http": "^1.5.9",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-brands-svg-icons": "^5.8.1",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
@@ -25,8 +23,9 @@
     "apollo-link-http": "^1.5.14",
     "core-js": "^2.6.5",
     "graphql": "^14.2.1",
+    "node-fetch": "^2.3.0",
     "nuxt": "^2.5.1",
-    "vue-apollo": "3.0.0-beta.19",
+    "vue-apollo": "3.0.0-beta.28",
     "vue-moment": "^4.0.0"
   },
   "devDependencies": {
@@ -34,7 +33,7 @@
     "babel-eslint": "^8.2.1",
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
+    "eslint-loader": "^2.1.2",
     "eslint-plugin-vue": "^4.0.0",
     "glob-all": "^3.1.0",
     "node-sass": "^4.11.0",
